--- a/http-body-util/Cargo.toml
+++ b/http-body-util/Cargo.toml
@@ -29,7 +29,7 @@ categories = ["web-programming"]
 bytes = "1"
 futures-util = { version = "0.3.14", default-features = false, features = ["alloc"] }
 http = "0.2"
-http-body = { version = "=1.0.0-rc.2", path = "../http-body" }
+http-body = { version = "0.4.5" }
 pin-project-lite = "0.2"
 
 [dev-dependencies]
